fixed names and added some programming etiquette. going to start focusing on clean and concise code

--- a/ContraCrack/ContraCrack.csproj
+++ b/ContraCrack/ContraCrack.csproj
@@ -82,7 +82,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Transformer.cs" />
+    <Compile Include="ITransformer.cs" />
     <Compile Include="Transformers\StringReplacer.cs" />
     <Compile Include="Util\Cecil.cs" />
     <Compile Include="Util\Interface.cs" />
