--- a/ContraCrack/ContraCrack.csproj
+++ b/ContraCrack/ContraCrack.csproj
@@ -11,7 +11,8 @@
     <RootNamespace>ContraCrack</RootNamespace>
     <AssemblyName>ContraCrack</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
+    <TargetFrameworkProfile>
+    </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
@@ -75,7 +76,7 @@
     <Compile Include="Util\Constants.cs" />
     <Compile Include="Util\LogHandler.cs" />
     <Compile Include="Transformers\BNCracker.cs" />
-    <Compile Include="Transformers\RSCBTagger.cs" />
+    <Compile Include="Transformers\RECTagger.cs" />
     <Compile Include="Transformers\ENCracker.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
